Fix auto download file in browser. Add search by document name